# ibus-bambusa

./: .gitignore  Cargo.toml  LICENSE  README.md  meson.build
.copr/: Makefile
.github/workflows/: audit.yml  ci.yml  release.yml
build-aux/: cargo-build.sh
crates/bambusa-config/: Cargo.toml
crates/bambusa-config/src/: config.rs  lib.rs
crates/bambusa-core/: Cargo.toml
crates/bambusa-core/src/: charset.rs  encoder.rs  engine.rs  flatten.rs  input_method.rs  lib.rs  mode.rs  parser.rs  rules.rs  spelling.rs  transform.rs  unicode_tables.rs
crates/bambusa-core/tests/: composition.rs
crates/ibus-bambusa/: Cargo.toml
crates/ibus-bambusa-setup/: Cargo.toml
crates/ibus-bambusa-setup/src/: main.rs
crates/ibus-bambusa/src/: config.rs  dict.rs  engines.rs  flags.rs  keysyms.rs  macros.rs  main.rs  preedit.rs
crates/ibus-zbus/: Cargo.toml
crates/ibus-zbus/examples/: echo_engine.rs
crates/ibus-zbus/src/: address.rs  consts.rs  engine.rs  factory.rs  handler.rs  lib.rs  types.rs
data/: bambusa.xml  bambusa.xml.in  ibus-setup-bambusa.desktop.in  meson.build  org.freedesktop.IBus.bambusa.gschema.xml  org.freedesktop.IBus.bambusa.setup.desktop.in
po/: POTFILES  ibus-bambusa.pot  meson.build  vi.po
