[workspace]
resolver = "2"
members = [
    "crates/bambusa-core",
    "crates/ibus-zbus",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Trung Lê <8@tle.id.au>"]
repository = "https://github.com/runlevel5/ibus-bambusa"

[workspace.dependencies]
bitflags = "2"
regex = "1"
zvariant = "5"
serde = { version = "1", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
