[workspace]
resolver = "2"
members = [
    "crates/bambusa-core",
    "crates/bambusa-config",
    "crates/ibus-zbus",
    "crates/ibus-bambusa",
    "crates/ibus-bambusa-setup",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-3.0-or-later"
authors = ["Trung Lê <8@tle.id.au>"]
repository = "https://github.com/runlevel5/ibus-bambusa"

[workspace.dependencies]
bitflags = "2"
regex = "1"
zvariant = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
gio = "0.22"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
