[package]
name = "bambusa-core"
description = "Core engine for ibus-bambusa, a Vietnamese IBus input method for GNOME (Wayland)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
regex.workspace = true
