[package]
name = "ibus-bambusa-setup"
description = "Preferences GUI for the ibus-bambusa engine (GNOME / libadwaita)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ibus-setup-bambusa"
path = "src/main.rs"

[dependencies]
bambusa-core = { path = "../bambusa-core" }
bambusa-config = { path = "../bambusa-config" }
gtk = { package = "gtk4", version = "0.9" }
libadwaita = { version = "0.7", features = ["v1_4"] }
