[package]
name = "ibus-bambusa"
description = "Vietnamese IBus input method engine for GNOME (Wayland)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ibus-engine-bambusa"
path = "src/main.rs"

[dependencies]
bambusa-core = { path = "../bambusa-core" }
bambusa-config = { path = "../bambusa-config" }
ibus-zbus = { path = "../ibus-zbus" }
zbus.workspace = true
tokio.workspace = true
gettext-rs = { workspace = true }
